--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem Vindo(a) a Betano!</title>
+    <link rel="shortcut icon" href="assets/img/betano.ico" type="image/x-icon">
+    <title>GANHE DINHEIRO E SE DIVIRTA! COM A BETANO!</title>
     <link rel="stylesheet" href="assets/style/style.css">
 </head>
 <body>
@@ -13,7 +14,12 @@
         </header>
 
         <section id="s1">
-                    <img src="assets/img/banner.jpg" alt="" id="banner">
+            <div class="row">
+                <img src="assets/img/banner.jpg" alt="" id="banner">
+                <button type="button" id="btn_cadastrar_1" onclick="location.href='cadastrar.html';">CADASTRAR AGORA!</button>
+            </div>
+                    
+                   
         </section>
 
         <section id="s2">
@@ -26,7 +32,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <h2><u>Em minutos, você se registra.</u> <br>Feito isso, é só realizar o primeiro depósito, pegar o bônus e se divertir.</h2>
-                    <button type="button" class="btn_cadastrar">EU QUERO,<br>SÓ SE FOR AGORA!!!</button>
+                    <button type="button" class="btn_cadastrar" onclick="location.href='cadastrar.html';">EU QUERO,<br>SÓ SE FOR AGORA!!!</button>
         </section>
 
         <section id="s3">
@@ -84,12 +90,12 @@
         </section>
         <div class="clearfix"></div>
         <footer>
-<span>2021 Betano. Todos os direitos reservados.</span>
-<hr>
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-<hr>
-<span>O jogo pode ser viciante, por favor jogue com responsabilidade.</span>
+            <span>2021. Betano. Todos os direitos reservados.</span>
+            <hr>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <hr>
+            <span>O jogo pode ser viciante, por favor jogue com responsabilidade.</span>
         </footer>
     </main>
 </body>
