--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <i>Betano</i>
                         </section>
                         
-                        <section id="s6">
+                        <div id="s6">
                             <aside>
                                 <div class="row">
                                     <img src="assets/img/ball.png" alt="ball">
@@ -88,7 +88,7 @@
                                     <h2><u>Entre em contato</u> com os operadores da Betano por meio do chat ao vivo, das 10h às 24h, no horário de Brasília, ou até mesmo utilizando o e-mail disponibilizado pela operadora: suporte@betano.com.</h2>
                                 </div>
                             </aside>
-                        </section>
+                        </div>
         </main>
 
         <div class="clearfix"></div>
